[package]
name = "enginep"
version = "0.1.0"
authors = ["Jonathan Turner <jonathan.d.turner@gmail.com>"]
edition = "2018"

[lib]
doctest = false

[[bin]]
name = "enginep"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon = "1.5.0"
num-bigint = "0.3.2"
num-traits = "0.2.14"
nu-parser = "0.28.0"
nu-source = "0.28.0"
nu-data = "0.28.0"
nu-protocol = "0.28.0"
nu-errors = "0.28.0"
nu-value-ext = "0.28.0"
nu-table = "0.28.0"
nu-ansi-term = "0.28.0"
parking_lot = "0.11.1"
indexmap = "1.6.2"
pretty-hex = "0.2.1"
